# Ascii-Hamming

./: .gitignore  CMakeLists.txt  darcy_design.txt  dconfig
design/: design.txt
include/: common.h
src/: CMakeLists.txt  common.c  main_to_ascii.c  main_to_hamming.c
